--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:excludeFromRecents="true"
+
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
