feat(md): handle storage permission request

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler: ^11.0.1
   record: ^5.0.1
   stop_watch_timer: ^3.0.2
 
