--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   permission_handler: ^11.0.1
   record: ^5.0.1
+  shared_preferences: ^2.2.2
   stop_watch_timer: ^3.0.2
 
 dev_dependencies:
