--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   record: ^5.0.1
   shared_preferences: ^2.2.2
   stop_watch_timer: ^3.0.2
+  wakelock_plus: ^1.1.4
 
 dev_dependencies:
   flutter_test:
