--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.4
   permission_handler: ^11.0.1
   record: ^5.0.1
   shared_preferences: ^2.2.2
