--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  device_info_plus: ^10.1.2
+  device_info_plus: ^11.3.3
   flutter:
     sdk: flutter
   fluttertoast: ^8.2.4
-  permission_handler: ^11.0.1
-  record: ^5.0.1
+  permission_handler: ^12.0.0+1
+  record: ^6.0.0
   shared_preferences: ^2.2.2
   stop_watch_timer: ^3.0.2
   wakelock_plus: ^1.1.4
   receive_sharing_intent: ^1.8.0
-
-dependency_overrides:
-  # fix dart breaking change
-  win32: ^5.5.4
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +48,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
